tests/expectations/parser-statement/unreachable/define.out
Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_0:1:1
     |
   1 | ; x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '.'
    --> test_1:1:1
     |
   1 | . x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found 'import'
    --> test_2:1:1
     |
   1 | import x = 10u8;
     | ^^^^^^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_3:1:1
     |
   1 | , x = 10u8;
     | ^
Error [EPAR0370005]: expected ] -- found '='
    --> test_4:1:5
     |
   1 | [ x = 10u8;
     |     ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ']'
    --> test_5:1:1
     |
   1 | ] x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_6:1:11
     |
   1 | { x = 10u8;
     |           ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '}'
    --> test_7:1:1
     |
   1 | } x = 10u8;
     | ^
Error [EPAR0370005]: expected ) -- found '='
    --> test_8:1:5
     |
   1 | ( x = 10u8;
     |     ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ')'
    --> test_9:1:1
     |
   1 | ) x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ':'
    --> test_10:1:1
     |
   1 | : x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '::'
    --> test_11:1:1
     |
   1 | :: x = 10u8;
     | ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '?'
    --> test_12:1:1
     |
   1 | ? x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test_13:1:1
     |
   1 | _ x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test_14:1:1
     |
   1 | = x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '=='
    --> test_15:1:1
     |
   1 | == x = 10u8;
     | ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '!='
    --> test_16:1:1
     |
   1 | != x = 10u8;
     | ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '>'
    --> test_17:1:1
     |
   1 | > x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '>='
    --> test_18:1:1
     |
   1 | >= x = 10u8;
     | ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '<'
    --> test_19:1:1
     |
   1 | < x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '<='
    --> test_20:1:1
     |
   1 | <= x = 10u8;
     | ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found '>'
    --> test_21:1:1
     |
   1 | > x = 10u8;
     | ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_22:1:1
     |
   1 | .. x = 10u8;
     | ^^
Error [EPAR0370009]: unexpected string: expected 'expression', found 'as'
    --> test_23:1:1
     |
   1 | as x = 10u8;
     | ^^
Error [EPAR0370005]: expected in -- found '='
    --> test_24:1:7
     |
   1 | for x = 10u8;
     |       ^
Error [EPAR0370005]: expected { -- found '='
    --> test_25:1:6
     |
   1 | if x = 10u8;
     |      ^
Error [EPAR0370009]: unexpected string: expected 'expression', found 'else'
    --> test_26:1:1
     |
   1 | else x = 10u8;
     | ^^^^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_27:1:4
     |
   1 | i8 x = 10u8;
     |    ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_28:1:5
     |
   1 | i16 x = 10u8;
     |     ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_29:1:5
     |
   1 | i32 x = 10u8;
     |     ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_30:1:5
     |
   1 | i64 x = 10u8;
     |     ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_31:1:6
     |
   1 | i128 x = 10u8;
     |      ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_32:1:4
     |
   1 | u8 x = 10u8;
     |    ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_33:1:5
     |
   1 | u16 x = 10u8;
     |     ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_34:1:5
     |
   1 | u32 x = 10u8;
     |     ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_35:1:5
     |
   1 | u64 x = 10u8;
     |     ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_36:1:6
     |
   1 | u128 x = 10u8;
     |      ^
Error [EPAR0370009]: unexpected string: expected 'expression', found '&'
    --> test_37:1:1
     |
   1 | & x = 10u8;
     | ^
Error [EPAR0370005]: expected ; -- found '='
    --> test_38:1:10
     |
   1 | return x = 10u8;
     |          ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_39:1:6
     |
   1 | self x = 10u8;
     |      ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_40:1:6
     |
   1 | Self x = 10u8;
     |      ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_41:1:6
     |
   1 | true x = 10u8;
     |      ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_42:1:7
     |
   1 | false x = 10u8;
     |       ^
Error [EPAR0370005]: expected ; -- found 'x'
    --> test_43:1:3
     |
   1 | 0 x = 10u8;
     |   ^
